--- a/voice-profiles.html
+++ b/voice-profiles.html
@@ -31,7 +31,7 @@
 
     <!-- SIDEBAR -->
     <aside id="sidebar"
-      class="bg-white border-r border-gray-200 dark:border-black w-64 h-screen transition duration-200
+      class="min-w-[260px] bg-white border-r border-gray-200 dark:border-black h-screen
                overflow-hidden hidden xl:flex flex-col justify-between fixed xl:sticky left-0 top-0 justify-start shadow-xl z-10">
 
       <div>
@@ -214,7 +214,7 @@
     <!-- END SIDEBAR -->
 
     <!-- MAIN CONTENT -->
-    <main class="flex-1 md:mx-auto p-5 md:p-10">
+    <main class="overflow-hidden flex-1 md:mx-auto p-5 md:p-10">
 
       <header class="lg:mb-6 md:mb-4 mb-2 relative flex justify-end lg:px-4 items-center gap-4">
         <h1 class="lg:text-3xl text-xl lg:text-center text-primary font-bold w-full">AI Voice Profile</h1>
