--- a/help.html
+++ b/help.html
@@ -31,7 +31,7 @@
 
     <!-- SIDEBAR -->
     <aside id="sidebar"
-      class="bg-white border-r border-gray-200 dark:border-black w-64 h-screen transition duration-200
+      class="min-w-[260px] bg-white border-r border-gray-200 dark:border-black h-screen
                overflow-hidden hidden xl:flex flex-col justify-between fixed xl:sticky left-0 top-0 justify-start shadow-xl z-10">
 
       <div>
@@ -210,9 +210,9 @@
     <!-- END SIDEBAR -->
 
     <!-- MAIN CONTENT -->
-    <main class="flex-1 md:mx-auto p-5 md:p-10">
+    <main class="overflow-hidden flex-1 md:mx-auto p-5 md:p-10">
       <div class="sm:mx-auto max-w-4xl">
-        <!-- Example content header -->
+        <!-- Content Header -->
         <header class="mb-6 relative">
           <h1 class="text-3xl text-center text-primary font-bold">Help Page</h1>
           <p class="text-center mt-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto dolore mollitia.
