Sorting Added to datatable and load more fixes

--- a/set-voice.html
+++ b/set-voice.html
@@ -57,7 +57,7 @@
 
         <!-- User Info -->
         <div class="flex items-center p-4 space-x-2 bg-gray">
-          <img src="/images/user-image.png" alt="User" class="w-8 h-8 rounded-full" />
+          <img src="/images/user-image.png" alt="User" class="w-8 h-8 rounded-full">
           <p class="font-semibold sidebar-text hide-on-collapse text-primary"><span class="font-normal">Hello</span>,
             {Customer}</p>
         </div>
@@ -160,10 +160,6 @@
               <a href="voice-collection.html"
                 class="block px-3 py-2 -ml-3 hover:bg-gray-100 rounded gray text-black dark:text-white opacity-50">
                 Voice Collection
-              </a>
-              <a href="account.html"
-                class="block px-3 py-2 -ml-3 hover:bg-gray-100 rounded gray text-black dark:text-white opacity-50">
-                Account
               </a>
               <a href="account.html"
                 class="block px-3 py-2 -ml-3 hover:bg-gray-100 rounded gray text-black dark:text-white opacity-50">
