--- a/voice-profiles.html
+++ b/voice-profiles.html
@@ -58,7 +58,7 @@
 
         <!-- User Info -->
         <div class="flex items-center p-4 space-x-2 bg-gray">
-          <img src="/images/user-image.png" alt="User" class="w-8 h-8 rounded-full" />
+          <img src="/images/user-image.png" alt="User" class="w-8 h-8 rounded-full">
           <p class="font-semibold sidebar-text hide-on-collapse text-primary"><span class="font-normal">Hello</span>,
             {Customer}</p>
         </div>
