Load more button is hiding now when all rows are loaded

--- a/call-logs.html
+++ b/call-logs.html
@@ -454,8 +454,8 @@
                             <tr class="border-b border-r">
                                 <!-- <td class="px-3 py-2 border-r border-primary"></td> -->
                                 <td class="px-3 py-2 border-r border-primary">12:00:00 PM</td>
-                                <td class="px-3 py-2 border-r border-primary">001</td>
-                                <td class="px-3 py-2 border-r border-primary">12:34 minutes</td>
+                                <td class="px-3 py-2 border-r border-primary">009</td>
+                                <td class="px-3 py-2 border-r border-primary">00:04 minutes</td>
                                 <td class="p-2 border-r border-primary">
                                     <a class="bg-secondary py-1 px-2 rounded-lg gap-2 inline-flex items-center justify-center min-w-[7.7rem]"
                                         href="#"><img class="white-play-icon lg:block hidden size-4"
@@ -531,9 +531,9 @@
                             </tr>
                             <tr class="border-b border-r">
                                 <!-- <td class="px-3 py-2 border-r border-primary"></td> -->
-                                <td class="px-3 py-2 border-r border-primary">12:00:00 PM</td>
-                                <td class="px-3 py-2 border-r border-primary">001</td>
-                                <td class="px-3 py-2 border-r border-primary">12:34 minutes</td>
+                                <td class="px-3 py-2 border-r border-primary">2:00:00 PM</td>
+                                <td class="px-3 py-2 border-r border-primary">010</td>
+                                <td class="px-3 py-2 border-r border-primary">01:10 minutes</td>
                                 <td class="p-2 border-r border-primary">
                                     <a class="bg-secondary py-1 px-2 rounded-lg gap-2 inline-flex items-center justify-center min-w-[7.7rem]"
                                         href="#"><img class="white-play-icon lg:block hidden size-4"
@@ -882,7 +882,7 @@
                             </tr>
                         </tbody>
                     </table>
-                    <div class="text-center bg-primary py-3 text-sm rounded-b-lg"><a href="javascript:;" data-load="10"
+                    <div class="load-more-btn text-center bg-primary py-3 text-sm rounded-b-lg"><a href="javascript:;" data-load="10"
                         class="font-bold underline text-white datatable__load-more">Load More Calls...</a></div>
                 </div>
                 <!-- Table -->
