--- a/voice-collection.html
+++ b/voice-collection.html
@@ -879,7 +879,7 @@
                 </tr>
               </tbody>
             </table>
-            <div class="text-center bg-primary py-3 text-sm rounded-b-lg text-white">
+            <div class="load-more-btn text-center bg-primary py-3 text-sm rounded-b-lg text-white">
               To create Custom voices <a class="text-white underline font-bold" href="/voice-creations.html">click here.</a>  
               <a href="javascript:;" data-load="5"
                 class="font-bold underline text-white datatable__load-more">Listed to more AI Voices</a></div>
