Divided Big JS file into smaller modules for easier future changes

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     <!-- END SIDEBAR -->
 
     <!-- MAIN CONTENT -->
-    <main class="overflow-hidden flex-1 md:mx-auto p-5">
+    <main class="overflow-hidden flex-1 md:mx-auto p-5 md:p-8">
 
       <!-- Content Header -->
       <header class="mb-6 relative md:flex-row flex-col flex justify-between lg:items-center">
@@ -280,7 +280,7 @@
       <div class="voice-and-calls w-full flex lg:flex-row flex-col justify-between gap-4 mt-10">
 
         <!-- Card -->
-        <div class="bg-gray rounded-xl p-4 lg:w-1/2 w-full">
+        <div class="bg-gray rounded-xl p-4 md:p-8 lg:w-1/2 w-full">
 
           <!-- Card Header -->
           <div class="flex items-center justify-between border-b-2 border-primary pb-6 mb-6 border-dashed">
@@ -541,7 +541,7 @@
         <!-- Card -->
 
         <!-- Card -->
-        <div class="bg-gray rounded-lg p-4 lg:w-1/2 w-full">
+        <div class="bg-gray rounded-lg p-4 md:p-8 lg:w-1/2 w-full">
 
           <!-- Card Header -->
           <div class="flex items-center justify-between border-b-2 border-primary pb-6 mb-6 border-dashed">
@@ -570,21 +570,18 @@
 
               <!-- Filter Dropdown -->
               <div
-                class="dropdown__menu hidden w-full absolute bg-secondary rounded-lg mt-3 text-white border-s border-e border-b border-white border-solid">
-                <div
+              class="dropdown__menu hidden w-full absolute bg-secondary rounded-lg mt-3 text-white border-s border-e border-b border-white border-solid">
+              <div data-value="Last 7 Days"
                   class="py-2 px-3 border-t border-white border-solid cursor-pointer rounded-t-lg hover:bg-secondary-300 transition duration-200">
-                  Filter 1</div>
-                <div
+                  Last 7 Days</div>
+              <div data-value="Last 14 Days"
                   class="py-2 px-3 border-t border-white border-solid cursor-pointer hover:bg-secondary-300 transition duration-200">
-                  Filter 2</div>
-                <div
+                  Last 14 Days</div>
+              <div data-value="Last 30 Days"
                   class="py-2 px-3 border-t border-white border-solid cursor-pointer hover:bg-secondary-300 transition duration-200">
-                  Filter 3</div>
-                <div
-                  class="py-2 px-3 border-t border-white border-solid cursor-pointer rounded-b-lg hover:bg-secondary-300 transition duration-200">
-                  Filter 4</div>
-              </div>
-              <!-- Filter Dropdown -->
+                  Last 30 Days</div>
+          </div>
+          <!-- Filter Dropdown -->
 
             </div>
             <!-- Filters -->
@@ -606,7 +603,7 @@
               </thead>
               <tbody>
                 <tr class="border-b border-r">
-                  <td class="p-3 border-r border-primary">12:00:00 PM</td>
+                  <td class="p-3 border-r border-primary">8 Dec 2023, 12:00 PM</td>
                   <td class="p-3 border-r border-primary">001</td>
                   <td class="p-3 border-r border-primary">12:34 min</td>
                   <td class="p-2 border-r border-primary">
@@ -646,7 +643,7 @@
                   </td>
                 </tr>
                 <tr class="border-b border-r">
-                  <td class="p-3 border-r border-primary">02:00:00 PM</td>
+                  <td class="p-3 border-r border-primary">9 Mar 2024, 7:00 AM</td>
                   <td class="p-3 border-r border-primary">002</td>
                   <td class="p-3 border-r border-primary">12:34 min</td>
                   <td class="p-2 border-r border-primary">
@@ -686,7 +683,7 @@
                   </td>
                 </tr>
                 <tr class="border-b border-r">
-                  <td class="p-3 border-r border-primary">09:00:00 PM</td>
+                  <td class="p-3 border-r border-primary">17 Apr 2024, 8:00 PM</td>
                   <td class="p-3 border-r border-primary">003</td>
                   <td class="p-3 border-r border-primary">09:00 min</td>
                   <td class="p-2 border-r border-primary">
@@ -726,7 +723,7 @@
                   </td>
                 </tr>
                 <tr class="border-b border-r">
-                  <td class="p-3 border-r border-primary">2:20:00 PM</td>
+                  <td class="p-3 border-r border-primary">21 Aug 2024, 3:00 PM</td>
                   <td class="p-3 border-r border-primary">004</td>
                   <td class="p-3 border-r border-primary">00:30 min</td>
                   <td class="p-2 border-r border-primary">
@@ -766,7 +763,7 @@
                   </td>
                 </tr>
                 <tr class="border-b border-r">
-                  <td class="p-3 border-r border-primary">12:00:00 PM</td>
+                  <td class="p-3 border-r border-primary">29 Nov 2022, 9:19 PM</td>
                   <td class="p-3 border-r border-primary">001</td>
                   <td class="p-3 border-r border-primary">12:34 min</td>
                   <td class="p-2 border-r border-primary">
@@ -806,7 +803,7 @@
                   </td>
                 </tr>
                 <tr class="border-b border-r">
-                  <td class="p-3 border-r border-primary">12:00:00 PM</td>
+                  <td class="p-3 border-r border-primary">21 Jul 2022, 11:55 PM</td>
                   <td class="p-3 border-r border-primary">001</td>
                   <td class="p-3 border-r border-primary">12:34 min</td>
                   <td class="p-2 border-r border-primary">
@@ -846,7 +843,7 @@
                   </td>
                 </tr>
                 <tr class="border-b border-r">
-                  <td class="p-3 border-r border-primary">12:00:00 PM</td>
+                  <td class="p-3 border-r border-primary">13 Sep 2024, 10:09 PM</td>
                   <td class="p-3 border-r border-primary">001</td>
                   <td class="p-3 border-r border-primary">12:34 min</td>
                   <td class="p-2 border-r border-primary">
