--- a/call-logs.html
+++ b/call-logs.html
@@ -17,7 +17,8 @@
             <a href="/">
                 <img src="/images/logo.svg" alt="Logo" class="relative z-11 w-[9rem] dark:brightness-[2]">
             </a>
-            <button class="sidebar-toggle p-2 dark:text-white hover:bg-gray-200 dark:hover:bg-black transition-all transition-duration-500 rounded focus:outline-none ms-3">
+            <button
+                class="sidebar-toggle p-2 dark:text-white hover:bg-gray-200 dark:hover:bg-black transition-all transition-duration-500 rounded focus:outline-none ms-3">
                 <!-- Hamburger Icon -->
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
                     xmlns="http://www.w3.org/2000/svg" stroke-width="2">
@@ -38,7 +39,8 @@
                 <div class="flex items-center justify-between p-4 sidebar-header">
                     <div class="flex items-center space-x-2">
                         <a class="hidden md:inline" href="index.html">
-                            <img src="/images/logo.svg" alt="Logo" class="w-[9rem] sidebar__logo-icon hide-on-collapse dark:brightness-[2]">
+                            <img src="/images/logo.svg" alt="Logo"
+                                class="w-[9rem] sidebar__logo-icon hide-on-collapse dark:brightness-[2]">
                             <img class="hidden sidebar__logo-icon hide-on-collapse" src="/images/logo-icon.svg"
                                 alt="Logo">
                         </a>
@@ -65,7 +67,9 @@
                 <!-- NAVIGATION -->
                 <nav class="flex flex-col px-2 mt-4 text-primary">
 
-                    <h6 class="sidebar__menu-text font-bold text-dark dark:text-white ps-3 opacity-50 mb-3 uppercase text-sm">Menu</h6>
+                    <h6
+                        class="sidebar__menu-text font-bold text-dark dark:text-white ps-3 opacity-50 mb-3 uppercase text-sm">
+                        Menu</h6>
 
                     <!-- Home Link -->
                     <a href="/" class="flex items-center px-3 py-2 rounded hover:bg-gray-100 mb-3">
@@ -84,7 +88,8 @@
                             </g>
                         </svg>
 
-                        <span class="ml-3 sidebar-text hide-on-collapse text-black dark:text-white opacity-50">Home</span>
+                        <span
+                            class="ml-3 sidebar-text hide-on-collapse text-black dark:text-white opacity-50">Home</span>
                     </a>
 
                     <!-- Call Logs Link -->
@@ -111,7 +116,8 @@
                             </g>
                         </svg>
 
-                        <span class="ml-3 sidebar-text hide-on-collapse text-black dark:text-white opacity-50">Call Logs</span>
+                        <span class="ml-3 sidebar-text hide-on-collapse text-black dark:text-white opacity-50">Call
+                            Logs</span>
                     </a>
 
                     <!-- SETTINGS (with Submenu) -->
@@ -136,8 +142,8 @@
 
                             <span
                                 class="ml-3 sidebar-text hide-on-collapse flex-1 text-left text-black dark:text-white opacity-50">Settings</span>
-                            <svg class="sidebar-arrow transition-all transition-duration-500" width="13" height="9" viewBox="0 0 13 9" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
+                            <svg class="sidebar-arrow transition-all transition-duration-500" width="13" height="9"
+                                viewBox="0 0 13 9" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path
                                     d="M11.3296 0.32959L6.49996 5.15921L1.67034 0.32959L0.0795898 1.92034L6.49996 8.34071L12.9203 1.92034L11.3296 0.32959Z"
                                     fill="#a4a4a4" />
@@ -163,9 +169,9 @@
                                 Voice Collection
                             </a>
                             <a href="account.html"
-                class="block px-3 py-2 -ml-3 hover:bg-gray-100 rounded gray text-black dark:text-white opacity-50">
-                Account
-              </a>
+                                class="block px-3 py-2 -ml-3 hover:bg-gray-100 rounded gray text-black dark:text-white opacity-50">
+                                Account
+                            </a>
                         </div>
                     </div>
 
@@ -191,7 +197,8 @@
                                 </defs>
                             </svg>
                         </span>
-                        <span class="ml-3 sidebar-text hide-on-collapse text-black dark:text-white opacity-50">Help</span>
+                        <span
+                            class="ml-3 sidebar-text hide-on-collapse text-black dark:text-white opacity-50">Help</span>
                     </a>
                 </nav>
 
@@ -248,8 +255,8 @@
                                     fill="white" />
                             </svg>
                             <span class="font-bold me-3">All Filter</span>
-                            <svg class="dropdown__arrow transition-all transition-duration" width="13" height="9" viewBox="0 0 13 9" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
+                            <svg class="dropdown__arrow transition-all transition-duration" width="13" height="9"
+                                viewBox="0 0 13 9" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path
                                     d="M11.3296 0.32959L6.49996 5.15921L1.67034 0.32959L0.0795898 1.92034L6.49996 8.34071L12.9203 1.92034L11.3296 0.32959Z"
                                     fill="#fff"></path>
@@ -260,18 +267,15 @@
                         <!-- Filter Dropdown -->
                         <div
                             class="dropdown__menu hidden w-full absolute bg-secondary rounded-lg mt-3 text-white border-s border-e border-b border-white border-solid">
-                            <div
+                            <div data-value="Last 7 Days"
                                 class="py-2 px-3 border-t border-white border-solid cursor-pointer rounded-t-lg hover:bg-secondary-300 transition duration-200">
-                                Filter 1</div>
-                            <div
+                                Last 7 Days</div>
+                            <div data-value="Last 14 Days"
                                 class="py-2 px-3 border-t border-white border-solid cursor-pointer hover:bg-secondary-300 transition duration-200">
-                                Filter 2</div>
-                            <div
+                                Last 14 Days</div>
+                            <div data-value="Last 30 Days"
                                 class="py-2 px-3 border-t border-white border-solid cursor-pointer hover:bg-secondary-300 transition duration-200">
-                                Filter 3</div>
-                            <div
-                                class="py-2 px-3 border-t border-white border-solid cursor-pointer rounded-b-lg hover:bg-secondary-300 transition duration-200">
-                                Filter 4</div>
+                                Last 30 Days</div>
                         </div>
                         <!-- Filter Dropdown -->
 
@@ -283,7 +287,8 @@
 
                 <!-- Table -->
                 <div class="datatable-wrapper">
-                    <table data-row="10" class="table call-logs-table w-full mx-auto text-primary text-sm text-center whitespace-nowrap">
+                    <table data-row="10"
+                        class="table call-logs-table w-full mx-auto text-primary text-sm text-center whitespace-nowrap">
                         <thead>
                             <tr class="bg-primary text-white">
                                 <!-- <th class="py-2 px-3 border-r border-gray rounded-t-lg rounded-e-none"></th> -->
@@ -882,8 +887,9 @@
                             </tr>
                         </tbody>
                     </table>
-                    <div class="load-more-btn text-center bg-primary py-3 text-sm rounded-b-lg"><a href="javascript:;" data-load="10"
-                        class="font-bold underline text-white datatable__load-more">Load More Calls...</a></div>
+                    <div class="load-more-btn text-center bg-primary py-3 text-sm rounded-b-lg"><a href="javascript:;"
+                            data-load="10" class="font-bold underline text-white datatable__load-more">Load More
+                            Calls...</a></div>
                 </div>
                 <!-- Table -->
 
