Color changes on datatable

--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
 
               <!-- Filter Dropdown -->
               <div
-              class="dropdown__menu hidden w-full absolute bg-secondary rounded-lg mt-3 text-white border-s border-e border-b border-white border-solid">
+              class="call-logs-filters__menu dropdown__menu hidden w-full absolute bg-secondary rounded-lg mt-3 text-white border-s border-e border-b border-white border-solid">
               <div data-value="Last 7 Days"
                   class="py-2 px-3 border-t border-white border-solid cursor-pointer rounded-t-lg hover:bg-secondary-300 transition duration-200">
                   Last 7 Days</div>
